change reservarion to schedules
