# flask_main.py
@@ -3,7 +3,7 @@ from flask_cors import CORS
 
 # from src.flask_api.sessions import session_router
 from src.flask_api.members import members_router
-from src.flask_api.reservations import reservations_router
+from src.flask_api.schedules import schedules_router
 from src.flask_api.attendances import attendances_router
 from src.swagger.flask_main import swagger_bp
 from src.flask_api.groups import groups_router
@@ -16,7 +16,7 @@ CORS(app)
 app.register_blueprint(swagger_bp, url_prefix="/api/swagger")
 # app.register_blueprint(session_router, url_prefix="/api/sessions")
 app.register_blueprint(members_router, url_prefix="/api/members")
-app.register_blueprint(reservations_router, url_prefix="/api/reservations")
+app.register_blueprint(schedules_router, url_prefix="/api/schedules")
 app.register_blueprint(attendances_router, url_prefix="/api/attendances")
 app.register_blueprint(groups_router, url_prefix="/api/groups")
 
